--- a/source/leads/index.html
+++ b/source/leads/index.html
@@ -11,8 +11,8 @@ The following Lead Contacts are building mailing lists, scheduling meetings, est
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:11px 20px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:11px 20px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;}
 .tg .tg-iprl{color:#343300}
 .tg .tg-znhc{background-color:#e3eae7;color:#343300}
 .tg .tg-hgcj{font-weight:bold;text-align:center}
@@ -41,18 +41,18 @@ The following Lead Contacts are building mailing lists, scheduling meetings, est
     <td class="tg-iprl">alex.croll@gmail.com</td>
   </tr>
   <tr>
-    <td class="tg-znhc">Outdoor Ed</td>
+    <td class="tg-znhc" rowspan="2">Outdoor Ed</td>
     <td class="tg-znhc">Kathe McGwin</td>
     <td class="tg-znhc">266-2615</td>
     <td class="tg-znhc">kmcgwin@rochester.rr.com</td>
   </tr>
   <tr>
-    <td class="tg-iprl" rowspan="2">Modified B Sports</td>
-    <td class="tg-iprl">Karen Johnston</td>
-    <td class="tg-iprl">683-2749</td>
-    <td class="tg-iprl">ksjohnston213@yahoo.com</td>
+    <td class="tg-znhc">Karen Johnston</td>
+    <td class="tg-znhc">683-2749</td>
+    <td class="tg-znhc">ksjohnston213@yahoo.com</td>
   </tr>
   <tr>
+    <td class="tg-iprl">Modified B Sports</td>
     <td class="tg-iprl">Irondequoit All Sports Boosters</td>
     <td class="tg-iprl">820-2543</td>
     <td class="tg-iprl">jbrennan@deloitte.com</td>
