--- a/source/leads/index.html
+++ b/source/leads/index.html
@@ -9,6 +9,8 @@ footer: true
 
 The following Lead Contacts are building mailing lists, scheduling meetings, establishing committees, and getting the answers needed in order to identify how best to restore programming within their focus area. More hands are needed! Please, reach out to a Lead Contact and find out how you can join in and help continue the tradition of a quality, comprehensive education that West Irondequoit is known for!
 
+<br><br>
+
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:11px 20px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;}
@@ -17,7 +19,12 @@ The following Lead Contacts are building mailing lists, scheduling meetings, est
 .tg .tg-znhc{background-color:#e3eae7;color:#343300}
 .tg .tg-hgcj{font-weight:bold;text-align:center}
 .tg .tg-escs{font-weight:bold;background-color:#26ade4;color:#f7fdfa}
+a {color:#312877}
+a:visited {color:#8C90C3}
+a:hover {color:#909FF1}
 </style>
+
+<center>
 <table class="tg">
   <tr>
     <th class="tg-hgcj" colspan="4">WISE Lead Contacts</th>
@@ -26,7 +33,7 @@ The following Lead Contacts are building mailing lists, scheduling meetings, est
     <td class="tg-iprl">WISE Leadership</td>
     <td class="tg-iprl">Erin Quintero</td>
     <td class="tg-iprl">329-6496</td>
-    <td class="tg-iprl">erinq@rochester.rr.com</td>
+    <td class="tg-iprl"><a href="mailto:erinq@rochester.rr.com">erinq@rochester.rr.com</a></td>
   </tr>
   <tr>
     <td class="tg-escs">Focus Area</td>
@@ -35,79 +42,80 @@ The following Lead Contacts are building mailing lists, scheduling meetings, est
     <td class="tg-escs">Email</td>
   </tr>
   <tr>
-    <td class="tg-iprl">Helmer Nature Center</td>
+    <td class="tg-iprl"><a href="/focus/index.html#Helmer-Nature-Center">Helmer Nature Center</a></td>
     <td class="tg-iprl">Alex Croll</td>
     <td class="tg-iprl">749-6850</td>
-    <td class="tg-iprl">alex.croll@gmail.com</td>
+    <td class="tg-iprl"><a href="mailto:alex.croll@gmail.com">alex.croll@gmail.com</a></td>
   </tr>
   <tr>
-    <td class="tg-znhc" rowspan="2">Outdoor Ed</td>
+    <td class="tg-znhc" rowspan="2"><a href="/focus/index.html#Outdoor-Ed">Outdoor Ed</a></td>
     <td class="tg-znhc">Kathe McGwin</td>
     <td class="tg-znhc">266-2615</td>
-    <td class="tg-znhc">kmcgwin@rochester.rr.com</td>
+    <td class="tg-znhc"><a href="mailto:kmcgwin@rochester.rr.com">kmcgwin@rochester.rr.com</a></td>
   </tr>
   <tr>
     <td class="tg-znhc">Karen Johnston</td>
     <td class="tg-znhc">683-2749</td>
-    <td class="tg-znhc">ksjohnston213@yahoo.com</td>
+    <td class="tg-znhc"><a href="mailto:ksjohnston213@yahoo.com">ksjohnston213@yahoo.com</a></td>
   </tr>
   <tr>
-    <td class="tg-iprl">Modified B Sports</td>
+    <td class="tg-iprl"><a href="/focus/index.html#Modified-B-Sports">Modified B Sports</a></td>
     <td class="tg-iprl">Irondequoit All Sports Boosters</td>
     <td class="tg-iprl">820-2543</td>
-    <td class="tg-iprl">jbrennan@deloitte.com</td>
+    <td class="tg-iprl"><a href="mailto:jbrennan@deloitte.com">jbrennan@deloitte.com</a></td>
   </tr>
   <tr>
-    <td class="tg-znhc">Teacher Positions/Training/Class Size</td>
+    <td class="tg-znhc"><a href="/focus/index.html#Teacher-Positions">Teacher Positions/Training/Class Size</a></td>
     <td class="tg-znhc">Jackie Mooney</td>
     <td class="tg-znhc">339-9848</td>
-    <td class="tg-znhc">jmooney@rochester.rr.com</td>
+    <td class="tg-znhc"><a href="mailto:jmooney@rochester.rr.com">jmooney@rochester.rr.com</a></td>
   </tr>
   <tr>
-    <td class="tg-iprl">DECA</td>
+    <td class="tg-iprl"><a href="/focus/index.html#DECA">DECA</a></td>
     <td class="tg-iprl">Lou DiCeasare</td>
     <td class="tg-iprl">752-9319</td>
-    <td class="tg-iprl">ldiceasar@rochester.rr.com</td>
+    <td class="tg-iprl"><a href="mailto:ldiceasar@rochester.rr.com">ldiceasar@rochester.rr.com</a></td>
   </tr>
   <tr>
-    <td class="tg-znhc">Political Action</td>
+    <td class="tg-znhc"><a href="/focus/index.html#Political-Action">Political Action</a></td>
     <td class="tg-znhc">Anne Kittleburger</td>
     <td class="tg-znhc">442-6138</td>
-    <td class="tg-znhc">stevekit@Rochester.rr.com</td>
+    <td class="tg-znhc"><a href="mailto:stevekit@Rochester.rr.com">stevekit@Rochester.rr.com</a></td>
   </tr>
   <tr>
-    <td class="tg-iprl" rowspan="2">Theater Productions</td>
+    <td class="tg-iprl" rowspan="2"><a href="/focus/index.html#Theater-Productions">Theater Productions</a></td>
     <td class="tg-iprl">Dawn Soufleris</td>
     <td class="tg-iprl">202-5690</td>
-    <td class="tg-iprl">dawnsoufleris@yahoo.com</td>
+    <td class="tg-iprl"><a href="mailto:dawnsoufleris@yahoo.com">dawnsoufleris@yahoo.com</a></td>
   </tr>
   <tr>
     <td class="tg-iprl">Jim Soufleris</td>
     <td class="tg-iprl">233-8416</td>
-    <td class="tg-iprl">jasoufleris@yahoo.com</td>
+    <td class="tg-iprl"><a href="mailto:jasoufleris@yahoo.com">jasoufleris@yahoo.com</a></td>
   </tr>
   <tr>
-    <td class="tg-znhc">Field Trips</td>
+    <td class="tg-znhc"><a href="/focus/index.html#Field-Trips">Field Trips</a></td>
     <td class="tg-znhc">Maureen Hyde</td>
     <td class="tg-znhc">278-7137</td>
-    <td class="tg-znhc">mohyde@gmail.com</td>
+    <td class="tg-znhc"><a href="mailto:mohyde@gmail.com">mohyde@gmail.com</a></td>
   </tr>
   <tr>
-    <td class="tg-iprl">Grants/Go Fund Me/Major Funding</td>
+    <td class="tg-iprl"><a href="/focus/index.html#Grants">Grants/Go Fund Me/Major Funding</a></td>
     <td class="tg-iprl">Lorien Castelle</td>
     <td class="tg-iprl">775-5589</td>
-    <td class="tg-iprl">lcastelle@gmail.com<br></td>
+    <td class="tg-iprl"><a href="mailto:lcastelle@gmail.com">lcastelle@gmail.com</a><br></td>
   </tr>
   <tr>
-    <td class="tg-znhc">HS Courses (APs etc)</td>
+    <td class="tg-znhc"><a href="/focus/index.html#HS-Courses">HS Courses (APs etc)</a></td>
     <td class="tg-znhc">Vacant</td>
     <td class="tg-znhc"></td>
     <td class="tg-znhc"></td>
   </tr>
   <tr>
-    <td class="tg-iprl">Building Usage</td>
+    <td class="tg-iprl"><a href="/focus/index.html#Building-Usage">Building Usage</a></td>
     <td class="tg-iprl">Kerry Nealson</td>
     <td class="tg-iprl">704-4862</td>
-    <td class="tg-iprl">Kerry.nealon@yahoo.com</td>
+    <td class="tg-iprl"><a href="mailto:Kerry.nealon@yahoo.com">Kerry.nealon@yahoo.com</a></td>
   </tr>
 </table>
+</center>
